--- a/map_sagamihara.html
+++ b/map_sagamihara.html
@@ -20,7 +20,7 @@
 <header><h1 style="font-size:14px;">相模原線 座標テスト表示中</h1></header>
 <div class="map-wrapper">
     <div class="map-content">
-        <img src="image.png" class="map-img">
+        <img src="image_sagamihara.png" class="map-img">
         <div id="trainLayer"></div>
     </div>
 </div>
