--- a/map_sagamihara.html
+++ b/map_sagamihara.html
@@ -3,55 +3,195 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>座標テストモード</title>
+    <title>相模原線 リアルタイム配線図 Ver.1.2</title>
+    <script src="unyo_kt.js"></script>
     <style>
         :root { --bg: #0f0f0f; --accent: #58a6ff; }
         body { margin: 0; background: var(--bg); color: #fff; font-family: 'Helvetica Neue', Arial, sans-serif; overflow: hidden; }
-        header { height: 50px; padding: 0 15px; background: rgba(0,0,0,0.9); display: flex; align-items: center; border-bottom: 1px solid #333; position: fixed; top: 0; width: 100%; z-index: 1000; }
-        .map-wrapper { position: absolute; top: 50px; bottom: 0; left: 0; right: 0; overflow: auto; background: #000; }
+        
+        header {
+            height: 50px; padding: 0 15px; background: rgba(0,0,0,0.9);
+            display: flex; align-items: center; border-bottom: 1px solid #333;
+            position: fixed; top: 0; width: 100%; z-index: 1000;
+        }
+
+        .map-wrapper {
+            position: absolute; top: 50px; bottom: 0; left: 0; right: 0;
+            overflow: auto; -webkit-overflow-scrolling: touch; background: #000;
+        }
+
         .map-content { position: relative; width: 1200px; height: 594px; }
         .map-img { position: absolute; top: 0; left: 0; width: 1200px; height: 594px; display: block; pointer-events: none; }
-        .train { position: absolute; width: 26px; height: 16px; border-radius: 2px; border: 1.5px solid #fff; transform: translate(-50%, -50%); z-index: 100; background: #ff4c7c; }
-        .train-label { position: absolute; top: 50%; transform: translateY(-50%); left: 100%; margin-left: 8px; background: rgba(0,0,0,0.85); color: #fff; padding: 2px 7px; border-radius: 4px; font-size: 10px; font-weight: bold; white-space: nowrap; border: 1px solid #444; }
+
+        .train {
+            position: absolute; width: 26px; height: 16px;
+            border-radius: 2px; border: 1.5px solid #fff;
+            transform: translate(-50%, -50%); z-index: 100;
+            transition: all 1.5s cubic-bezier(0.4, 0, 0.2, 1);
+            box-shadow: 0 0 10px rgba(0,0,0,0.8);
+            display: flex; align-items: center; justify-content: center;
+        }
+
+        .train-label {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background: rgba(0,0,0,0.85); color: #fff;
+            padding: 2px 7px; border-radius: 4px;
+            font-size: 10px; font-weight: bold; white-space: nowrap;
+            display: flex; flex-direction: row; align-items: center; gap: 5px; 
+            border: 1px solid #444;
+            pointer-events: none;
+            z-index: 110;
+        }
+
+        .label-nobori { right: 100%; margin-right: 8px; }
+        .label-kudari { left: 100%; margin-left: 8px; }
+
+        .delay-text { color: #ff4444; font-weight: 900; }
+        .car-model { color: #00ffcc; font-size: 9px; }
         .unyo-no { color: #ffeb3b; }
+        .car-sr { color: #aaa; font-size: 9px; } 
+        .dest-text { color: #fff; background: #333; padding: 0 3px; border-radius: 2px; } 
+
+        .sy-1 { background-color: #ff4c7c; }
+        .sy-2 { background-color: #00b66a; }
+        .sy-3 { background-color: #0082ff; }
+        .sy-5 { background-color: #d8d100; color: #000; }
+        .sy-6 { background-color: #888; }
+        .sy-9, .sy-11 { background-color: #c71585; }
     </style>
 </head>
 <body>
-<header><h1 style="font-size:14px;">相模原線 座標テスト表示中</h1></header>
+
+<header>
+    <a href="index.html" style="color:var(--accent); text-decoration:none; margin-right:15px; font-size:13px;">← 一覧に戻る</a>
+    <h1 style="font-size:14px; margin:0;">京王 相模原線 リアルタイム配線図</h1>
+    <div id="status" style="margin-left:auto; font-size:11px; color:#aaa;">接続中...</div>
+</header>
+
 <div class="map-wrapper">
-    <div class="map-content">
+    <div class="map-content" id="mapContent">
         <img src="image_sagamihara.png" class="map-img">
         <div id="trainLayer"></div>
     </div>
 </div>
+
 <script>
+const FEED_URL = "https://i.opentidkeio.jp/data/traffic_info.json";
+
 const posCoords = {
-    "D044": {x: 107, y: 175}, "S016": {x: 107, y: 202}, "E044_1": {x: 193, y: 175}, "E044_2": {x: 193, y: 202},
-    "D045": {x: 265, y: 175}, "U044": {x: 265, y: 202}, "E045_1": {x: 336, y: 175}, "E045_2": {x: 336, y: 202},
-    "D046": {x: 404, y: 175}, "U045": {x: 404, y: 202}, "E046_1": {x: 475, y: 175}, "E046_2": {x: 475, y: 202},
-    "D047": {x: 549, y: 175}, "U046": {x: 549, y: 202}, "E047_1": {x: 625, y: 175}, "E047_2": {x: 625, y: 202},
-    "D048": {x: 691, y: 175}, "U047": {x: 691, y: 202}, "E048_1": {x: 780, y: 147}, "E048_2": {x: 780, y: 175},
-    "E048_3": {x: 780, y: 202}, "E048_4": {x: 780, y: 230}, "D049": {x: 910, y: 175}, "U048": {x: 910, y: 202},
-    "E049_1": {x: 1023, y: 175}, "E049_2": {x: 1023, y: 202}, "D050": {x: 1105, y: 175}, "U049": {x: 1105, y: 202},
+    // 相模原線専用座標
+    "D044":   {x: 107, y: 175}, "S016":   {x: 107, y: 202},
+    "E044_1": {x: 193, y: 175}, "E044_2": {x: 193, y: 202},
+    "D045":   {x: 265, y: 175}, "U044":   {x: 265, y: 202},
+    "E045_1": {x: 336, y: 175}, "E045_2": {x: 336, y: 202},
+    "D046":   {x: 404, y: 175}, "U045":   {x: 404, y: 202},
+    "E046_1": {x: 475, y: 175}, "E046_2": {x: 475, y: 202},
+    "D047":   {x: 549, y: 175}, "U046":   {x: 549, y: 202},
+    "E047_1": {x: 625, y: 175}, "E047_2": {x: 625, y: 202},
+    "D048":   {x: 691, y: 175}, "U047":   {x: 691, y: 202},
+    "E048_1": {x: 780, y: 147}, "E048_2": {x: 780, y: 175}, "E048_3": {x: 780, y: 202}, "E048_4": {x: 780, y: 230},
+    "D049":   {x: 910, y: 175}, "U048":   {x: 910, y: 202},
+    "E049_1": {x: 1023, y: 175}, "E049_2": {x: 1023, y: 202},
+    "D050":   {x: 1105, y: 175}, "U049":  {x: 1105, y: 202},
     "E050_1": {x: 150, y: 358}, "E050_2": {x: 150, y: 386}, "E050_3": {x: 150, y: 413}, "E050_4": {x: 150, y: 441},
-    "D051": {x: 278, y: 386}, "U050": {x: 278, y: 413}, "E051_1": {x: 386, y: 386}, "E051_2": {x: 386, y: 413},
-    "D052": {x: 469, y: 386}, "U051": {x: 469, y: 413}, "E052_1": {x: 545, y: 386}, "E052_2": {x: 545, y: 413},
-    "D053": {x: 623, y: 386}, "U052": {x: 623, y: 413}, "E053_1": {x: 701, y: 386}, "E053_2": {x: 701, y: 413},
-    "D054": {x: 795, y: 386}, "U053": {x: 795, y: 413}, "E054_1": {x: 891, y: 386}, "E054_2": {x: 891, y: 413}
+    "D051":   {x: 278, y: 386}, "U050":   {x: 278, y: 413},
+    "E051_1": {x: 386, y: 386}, "E051_2": {x: 386, y: 413},
+    "D052":   {x: 469, y: 386}, "U051":   {x: 469, y: 413},
+    "E052_1": {x: 545, y: 386}, "E052_2": {x: 545, y: 413},
+    "D053":   {x: 623, y: 386}, "U052":   {x: 623, y: 413},
+    "E053_1": {x: 701, y: 386}, "E053_2": {x: 701, y: 413},
+    "D054":   {x: 795, y: 386}, "U053":   {x: 795, y: 413},
+    "E054_1": {x: 891, y: 386}, "E054_2": {x: 891, y: 413}
 };
 
-function update() {
-    const layer = document.getElementById('trainLayer');
-    Object.keys(posCoords).forEach(key => {
-        const base = posCoords[key];
-        const el = document.createElement('div');
-        el.className = 'train';
-        el.style.left = `${base.x}px`;
-        el.style.top = `${base.y}px`;
-        el.innerHTML = `<div class="train-label">TEST <span class="unyo-no">${key}</span></div>`;
-        layer.appendChild(el);
-    });
+function getCarModel(sk) {
+    const models = { "2":"2000", "5":"5000", "7":"7000", "8":"8000", "9":"9000", "0":"10-300" };
+    return models[String(sk)] || "";
 }
+
+function getDestName(ik) {
+    const destMap = {
+        "001":"新", "033":"N", "002":"笹", "003":"明", "006":"桜", "010":"烏", "012":"つ", "016":"調",
+        "018":"飛", "021":"東", "022":"府", "027":"高", "031":"北", "032":"八", "036":"馬", "037":"動",
+        "042":"尾", "043":"山", "048":"若", "050":"セ", "052":"沢", "054":"橋", "101":"市", "107":"岩",
+        "112":"住", "114":"島", "118":"瑞", "120":"本"
+    };
+    return destMap[String(ik)] || ik;
+}
+
+function getUnyoFromJS(trNo) {
+    if (typeof data === 'undefined') return null;
+    for (const [unyoName, trainList] of Object.entries(data)) {
+        if (trainList.includes(String(trNo))) {
+            return unyoName;
+        }
+    }
+    return null;
+}
+
+async function update() {
+    try {
+        const res = await fetch(FEED_URL + "?" + Date.now());
+        const json = await res.json();
+        const layer = document.getElementById('trainLayer');
+        const activeIds = new Set();
+        const allTrains = [...(json.TS || []), ...(json.TB || [])];
+        const posCounter = {};
+
+        allTrains.forEach(st => {
+            (st.ps || []).forEach(p => {
+                if (!p.tr) return;
+                const key = p.bs ? `${st.id}_${p.bs}` : st.id;
+                const base = posCoords[key] || posCoords[st.id];
+
+                if (base) {
+                    activeIds.add(p.tr);
+                    const cKey = `${base.x}_${base.y}`;
+                    const offset = (posCounter[cKey] || 0) * 10;
+                    posCounter[cKey] = (posCounter[cKey] || 0) + 1;
+
+                    let el = document.getElementById(`tr-${p.tr}`);
+                    if (!el) {
+                        el = document.createElement('div');
+                        el.id = `tr-${p.tr}`;
+                        el.className = 'train';
+                        layer.appendChild(el);
+                    }
+                    
+                    el.className = `train sy-${p.sy || '6'}`;
+                    el.style.left = `${base.x + offset}px`;
+                    el.style.top = `${base.y}px`;
+
+                    const model = getCarModel(p.sk);
+                    const unyo = getUnyoFromJS(p.tr) || "--";
+                    const dest = getDestName(p.ik_tr);
+                    const sr = p.sr ? `${p.sr}両` : "";
+                    const delayHtml = (p.dl && parseInt(p.dl) > 0) ? `<span class="delay-text">+${p.dl}</span>` : "";
+                    const dirClass = (String(p.ki) === "1") ? "label-nobori" : "label-kudari";
+
+                    el.innerHTML = `
+                        <div class="train-label ${dirClass}">
+                            <span class="car-model">${model}</span>
+                            <span class="unyo-no">${unyo}</span>
+                            <span class="car-sr">${sr}</span>
+                            <span class="dest-text">${dest}</span>
+                            <span>${p.tr}</span>
+                            ${delayHtml}
+                        </div>`;
+                }
+            });
+        });
+
+        document.querySelectorAll('.train').forEach(el => {
+            if (!activeIds.has(el.id.replace('tr-', ''))) el.remove();
+        });
+        document.getElementById('status').textContent = "最終更新: " + new Date().toLocaleTimeString();
+    } catch (e) { console.error(e); }
+}
+
+setInterval(update, 20000);
 update();
 </script>
 </body>
